# BattleShip

./: CMakeLists.txt  board.cpp  board.h  main.cpp  player.cpp  player.h  ship.cpp  ship.h
GameConfigurations/: 2_1lenSips.txt  3_3lenShips.txt  DefaultConfiguration.txt  SingleShip.txt  test.txt
